# sage-second

./: .npmrc  README.md  README_WINDOWS.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/api-server/: .env  requirements.txt  start_django.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/sage_backend/: db.sqlite3  manage.py
artifacts/api-server/sage_backend/logs/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
artifacts/api-server/sage_backend/logs/migrations/: 0001_initial.py  0002_dailylog_user_unique.py  (+1 more)
artifacts/api-server/sage_backend/meals/: admin.py  models.py  serializers.py  urls.py  views.py
artifacts/api-server/sage_backend/sage_backend/: settings.py  urls.py  wsgi.py
artifacts/api-server/sage_backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
artifacts/api-server/src/routes/: index.ts  logs.ts  meals.ts
artifacts/sage/: index.html  vite.config.ts
artifacts/sage/.replit-artifact/: artifact.toml
artifacts/sage/src/: App.tsx  index.css
artifacts/sage/src/contexts/: AuthContext.tsx
artifacts/sage/src/pages/: auth-page.tsx  burn-calculator.tsx  daily-log.tsx  dashboard.tsx  profile-setup.tsx  weekly-view.tsx
artifacts/sage/src/utils/: health.ts
attached_assets/: Pasted-You-are-enhancing-an-existing-nutrition-tracking-web-ap_1775620099413.txt
lib/api-client-react/src/: custom-fetch.ts
lib/api-spec/: openapi.yaml
lib/db/src/schema/: daily_logs.ts  index.ts  log_entries.ts  meals.ts
(+8 files in other folders)
